[package]
name = "jeopardy"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1.80"
axum = "0.7.3"
serde = "1.0.203"
serde_json = "1.0.117"
shuttle-axum = "0.46.0"
shuttle-runtime = "0.46.0"
shuttle-service = "0.46.0"
surrealdb = { version = "1.5.3", features = ["kv-mem"]}
tokio = "1.28.2"
tower-http = { version = "0.5.0", features = ["fs"] }
