[package]
name = "jeopardy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.3"
actix-web = "4.5.1"
actix-files = "0.6.5"
actix-multipart = "0.6.1"
actix-rt = "2.10.0"
actix-session = "0.9.0"
actix-identity = "0.7.1"
actix-session-surrealdb = "0.1.8"
actix-web-actors = "4.3.0"

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"

rand = "0.8.5"
chrono = "0.4.38"
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"
surrealdb = { version = "1.5.3", features = ["kv-mem"] }